Semi-Fix for date input placeholder overflowing

--- a/involveU-frontend/src/app/components/admin-page/admin-page.component.scss
+++ b/involveU-frontend/src/app/components/admin-page/admin-page.component.scss
@@ -15,10 +15,12 @@
 
 .adminInputWidth {
   width: 50%;
+  height: auto;
 }
 
 .adminInputWidthMobile {
   width: 80%;
+  height: auto;
 }
 
 .largeTextField {
