--- a/involveU-frontend/src/app/components/eboard-page/eboard-page.component.scss
+++ b/involveU-frontend/src/app/components/eboard-page/eboard-page.component.scss
@@ -64,11 +64,13 @@
 
 .eboardInputWidth {
   width: 50%;
+  height: auto;
   text-align: center;
 }
 
 .eboardInputWidthMobile {
   width: 80%;
+  height: auto;
   text-align: center;
 }
 
